--- a/application/source/pages/index.html
+++ b/application/source/pages/index.html
@@ -4,7 +4,15 @@
 
 <main>
 	<div class="container">
-		<h2>page index</h2>
+
+		<div class="jumbotron">
+			<h1>Gulp Kickstarter</h1>
+			<p>This example is a quick exercise to illustrate how the default, static navbar and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
+
+			<p>
+				<a class="btn btn-lg btn-primary" href="/" role="button">View docs &raquo;</a>
+			</p>
+		</div>
 	</div>
 </main>
 
