Atualizado task sprite

--- a/application/source/pages/index.html
+++ b/application/source/pages/index.html
@@ -11,6 +11,7 @@
 
 			<p>
 				<a class="btn btn-lg btn-primary" href="/" role="button">View docs &raquo;</a>
+				<i class="icon credit-card-brand-mastercard"></i>
 			</p>
 		</div>
 	</div>
